--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,21 @@ img {
   color: #404bbf;
 }
 
+.studio-nav {
+  position: relative;
+}
+
+.studio-nav::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #404bbf;
+}
+
 .address {
   font-style: normal;
   margin-left: auto;
@@ -141,6 +156,14 @@ img {
   background-color: #2e2f42;
   padding-top: 188px;
   padding-bottom: 188px;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/people-office.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .section-one .title {
@@ -212,6 +235,17 @@ img {
   width: calc((100% - 72px) / 4);
 }
 
+.svg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #8e8f99;
+  margin-bottom: 8px;
+  height: 112px;
+  border-radius: 4px;
+  background-color: #f4f4fd;
+}
+
 .advantages-list .title {
   font-weight: 500;
   font-size: 20px;
@@ -249,6 +283,8 @@ img {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0 0 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-list {
@@ -279,6 +315,41 @@ img {
   padding: 32px 0;
 }
 
+.media-links {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.media-links:hover,
+.media-links:focus {
+  background-color: #404bbf;
+}
+
+.social-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  margin-top: 8px;
+  gap: 24px;
+}
+
+.social-links {
+  width: 40px;
+  height: 40px;
+  margin-top: 8px;
+}
+
+.team-social {
+  fill: #f4f4fd;
+}
+
 .section-four {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -302,7 +373,17 @@ img {
 }
 
 .portfolio-item {
-  background: #fff;
+width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .hidden-text {
+  transform: translateY(0%);
+}
+
+.portfolio-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-list-content {
@@ -328,10 +409,33 @@ img {
   color: #434455;
 }
 
+.hidden-info {
+  position: relative;
+  overflow: hidden;
+}
+
 .footer {
   background: #2e2f42;
   padding: 100px 0;
 }
+
+.hidden-text {
+  position: absolute;
+  top: 0;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 40px 32px;
+  width: 100%;
+  height: 100%;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+}
+
+
 
 .footer-link {
   font-family: "Raleway", sans-serif;
@@ -353,6 +457,7 @@ img {
   color: #f4f4fd;
 }
 
+
 .footer-link {
   text-decoration: none;
   margin-bottom: 16px;
@@ -366,4 +471,33 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
+}
+
+.footer-words{
+  font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+    color: #fff;
+}
+
+.footer-icon-list{
+    display: flex;
+      gap: 16px;
+}
+
+.footer-media-links{
+display: flex;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #4d5ae5;
+}
+.fotter-social-link{
+      width: 40px;
+        height: 40px;
 }
