--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,9 @@ img {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);;
 }
 
 .nav-add-container {
@@ -109,6 +112,8 @@ img {
 
 .studio-nav {
   position: relative;
+  color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .studio-nav::after {
@@ -131,6 +136,7 @@ img {
   display: flex;
   align-items: center;
   gap: 40px;
+  
 }
 
 .address-list .address-link {
@@ -142,6 +148,7 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-list .address-link:hover {
@@ -164,6 +171,7 @@ img {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  max-width: 1440px;
 }
 
 .section-one .title {
@@ -197,6 +205,7 @@ img {
   border: none;
   min-width: 169px;
   height: 56px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-button:hover {
