--- a/css/styles.css
+++ b/css/styles.css
@@ -45,8 +45,7 @@ img {
 .header {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 1px 6px rgba(46, 47, 66, 0.08);;
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .nav-add-container {
@@ -136,7 +135,6 @@ img {
   display: flex;
   align-items: center;
   gap: 40px;
-  
 }
 
 .address-list .address-link {
@@ -382,7 +380,7 @@ img {
 }
 
 .portfolio-item {
-width: calc((100% - 48px) / 3);
+  width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -444,8 +442,6 @@ width: calc((100% - 48px) / 3);
   background-color: #4d5ae5;
 }
 
-
-
 .footer-link {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -454,6 +450,17 @@ width: calc((100% - 48px) / 3);
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+}
+
+.footer-cont {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-logo-con {
+  display: flex;
+  flex-direction: column;
+  margin-right: 120px;
 }
 
 .footer .logo-word-two {
@@ -465,7 +472,6 @@ width: calc((100% - 48px) / 3);
   text-transform: uppercase;
   color: #f4f4fd;
 }
-
 
 .footer-link {
   text-decoration: none;
@@ -482,22 +488,22 @@ width: calc((100% - 48px) / 3);
   max-width: 264px;
 }
 
-.footer-words{
+.footer-words {
   font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    margin-bottom: 16px;
-    color: #fff;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+  color: #fff;
 }
 
-.footer-icon-list{
+.footer-icon-list {
     display: flex;
       gap: 16px;
 }
 
-.footer-media-links{
-display: flex;
+.footer-media-links {
+  display: flex;
   border-radius: 50%;
   align-items: center;
   justify-content: center;
@@ -506,7 +512,10 @@ display: flex;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #4d5ae5;
 }
-.fotter-social-link{
-      width: 40px;
-        height: 40px;
+.footer-media-links:hover,
+.footer-media-links:focus{
+ background-color: #31d0aa;}
+.fotter-social-link {
+ width: 40px;
+  height: 40px;
 }
