--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,7 @@ img {
 .studio-nav {
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #404bbf;
 }
 
 .studio-nav::after {
@@ -487,17 +488,17 @@ img {
 }
 
 .footer-words {
- font-weight: 500;
+  font-weight: 500;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.02em;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 16px;
 }
 
 .footer-icon-list {
-    display: flex;
-      gap: 16px;
+  display: flex;
+  gap: 16px;
 }
 
 .footer-media-links {
@@ -511,10 +512,10 @@ img {
   background-color: #4d5ae5;
 }
 .footer-media-links:hover,
-.footer-media-links:focus{
- background-color: #31d0aa;}
+.footer-media-links:focus {
+  background-color: #31d0aa;
+}
 .fotter-social-link {
- width: 40px;
+  width: 40px;
   height: 40px;
 }
-
