--- a/css/styles.css
+++ b/css/styles.css
@@ -112,8 +112,9 @@ img {
 .studio-nav {
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  color: #404bbf;
 }
+
+.studio-nav{color: #404bbf;}
 
 .studio-nav::after {
   content: "";
