--- a/css/styles.css
+++ b/css/styles.css
@@ -165,11 +165,12 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(/images/people-office.jpg);
+    url(../images/people-office.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   max-width: 1440px;
+  margin: 0 auto;
 }
 
 .section-one .title {
