--- a/css/styles.css
+++ b/css/styles.css
@@ -109,10 +109,13 @@ img {
   color: #404bbf;
 }
 
+.nav-list .studio-nav {
+  color: #404bbf;
+}
+
 .studio-nav {
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  color: #404bbf;
 }
 
 .studio-nav::after {
